force-app/main/default/staticresources/python/Disappear/src/objects/ProdIndTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Members of Team</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ProdInd_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipName>Product_Indication_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BioSimilar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Indication Team Member</label>
    <listViews>
        <fullName>Product_Indication_Team_Member</fullName>
        <columns>Product_Indication__c</columns>
        <columns>Contact__c</columns>
        <columns>Team_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Product Indication Team Members</label>
        <sharedTo>
            <group>Business_Adm_Grp</group>
            <role>GPPL</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PITM-{000000}</displayFormat>
        <label>ProductIndicationTeam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Indication Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>